# agent-skills

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  mcp.json
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
_shared/: nimble-playbook.md  profile-and-onboarding.md
agents/: nimble-analyst.md  nimble-researcher.md  nimble-setup.md
commands/: search.md
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/src/crewai_nimble/: __init__.py  tools.py
integrations/crewai/tests/: test_tools.py
nimble-web-expert-workspace/evals/: evals-v2.json  evals.json
nimble-web-expert-workspace/iteration-1/: benchmark.json  benchmark.md  review.html
nimble-web-expert-workspace/iteration-1/eval-amazon-price/: eval_metadata.json
nimble-web-expert-workspace/iteration-2/: benchmark.json  report.md
rules/: nimble-tools.mdc  nimble-web-expert.mdc
scripts/: sync-shared.sh
skills/company-deep-dive/: SKILL.md
skills/competitor-intel/: SKILL.md
skills/competitor-positioning/: SKILL.md
skills/find-all-locations/: README.md  SKILL.md
skills/market-discovery/: README.md  SKILL.md
skills/meeting-prep/: SKILL.md
skills/nimble-agent-builder/: README.md  SKILL.md  nimble-agent-builder.excalidraw
skills/nimble-agent-orchestrator/: SKILL.md
skills/nimble-agents/: SKILL.md
skills/nimble-web-expert/: README.md  SKILL.md  nimble-web-expert.excalidraw
skills/nimble-web-search/: SKILL.md
skills/nimble-web-tools/: SKILL.md
skills/practitioner-extract/: README.md  SKILL.md
(+253 files in other folders)
